WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103321
New check for usesTileCacheLayer on Windows needed after
r133056
https://bugs.webkit.org/show_bug.cgi?id=103321
Summary
New check for usesTileCacheLayer on Windows needed after r133056
Roger Fong
Reported
2012-11-26 16:51:42 PST
After
r133056
it no longer suffices to check use the existing usesTileCacheLayer method on Windows. The change resulted in 3 crashing tests: compositing/rotated-tiled-clamped compositing/rotated-tiled-preserve3d-clamped fast/events/tabindex-focus-blur-all We should add in platform specific method for Windows that returns false for this method. In addition, compositing/rotated-tiled-clamped compositing/rotated-tiled-preserve3d-clamped need to be removed from the Windows skip list and Windows specific results are needed since they were newly added tests with
r133056
.
Attachments
patch
(6.91 KB, patch)
2012-11-26 17:02 PST
,
Roger Fong
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Roger Fong
Comment 1
2012-11-26 17:02:11 PST
Created
attachment 176115
[details]
patch
Ryosuke Niwa
Comment 2
2012-11-27 11:57:35 PST
This patch appears to have broken Mac builds:
http://trac.webkit.org/changeset/135890
http://build.webkit.org/builders/Apple%20Lion%20Debug%20%28Build%29/builds/8405
#elif ^ /Volumes/Data/slave/lion-debug/build/Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:1055:21: error: no member named 'usesTileCacheLayer' in 'WebCore::PlatformCALayer' ASSERT(m_layer->usesTileCacheLayer()); ~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~ /Volumes/Data/slave/lion-debug/build/WebKitBuild/Debug/usr/local/include/wtf/Assertions.h:247:8: note: expanded from macro 'ASSERT' (!(assertion) ? \ ^ /Volumes/Data/slave/lion-debug/build/Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:1607:19: error: no member named 'usesTileCacheLayer' in 'WebCore::PlatformCALayer' if (!m_layer->usesTileCacheLayer()) ~~~~~~~ ^
Ryosuke Niwa
Comment 3
2012-11-27 12:01:49 PST
Build fix landed in
http://trac.webkit.org/changeset/135895
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug