Windows specific implementation of usesTileCacheLayer needed after r133056. https://bugs.webkit.org/show_bug.cgi?id=103321

Reviewed by Simon Fraser.

After r133056 it no longer suffices to use the existing usesTileCacheLayer method on Windows.
The change resulted in 3 crashing tests:
compositing/rotated-tiled-clamped
compositing/rotated-tiled-preserve3d-clamped
fast/events/tabindex-focus-blur-all

* platform/win/TestExpectations: 
Remove the tests below from the Windows skip list. 

* platform/win/compositing/tiling/rotated-tiled-clamped-expected.txt: Added.
* platform/win/compositing/tiling/rotated-tiled-preserve3d-clamped-expected.txt: Added.
Add Windows specific results for tests added in r133056.

* platform/graphics/ca/PlatformCALayer.h:
(WebCore::PlatformCALayer::usesTileCacheLayer):
(PlatformCALayer): 
Adding in platform specific method for Windows that returns false for this method.


git-svn-id: svn://svn.chromium.org/blink/trunk@135890 bbb929c8-8fbe-4397-9dbb-9b2b20218538